# CodeTool

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  BANNER.txt  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  DEMO_QUICK_START.md  Dockerfile  FILES_LIST.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REPORT.md  ROADMAP.md  SUMMARY.md  VISUAL_GUIDE.md  demo_local.py  docker-compose.yml  env.example  instructions_to_show.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  issue_handler.yml  pr_review.yml
cloud-ru/: deploy.sh
code_agent/: __init__.py  cli.py  config.py
code_agent/agents/: __init__.py  code_agent.py  reviewer_agent.py
code_agent/core/: __init__.py  github_client.py  llm.py
code_agent/utils/: __init__.py  logger.py
config/: prompts.yaml
docs/: ARCHITECTURE.md  CLOUD_RU_DEPLOYMENT.md  EXAMPLES.md  INSTALLATION.md
k8s/: deployment.yaml  job-process-issue.yaml
scripts/: setup.sh
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agents.py  test_config.py  test_imports.py  test_llm.py  test_utils.py
